--- a/instant-backend/.env
+++ b/instant-backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI = mongodb+srv://anushkatbba2023:mongo@cluster0.e77gt.mongodb.net/?retryWrites=true
+MONGO_URI =mongodb+srv://tadaanushka:<mongo>@cluster0.yji84.mongodb.net/?retryWrites=true&w=majority
