--- a/instantDispatch/package.json
+++ b/instantDispatch/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "@react-google-maps/api": "^2.20.3",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
